--- a/styles/base.less
+++ b/styles/base.less
@@ -1,9 +1,19 @@
 @import "reset.css";
 
 @import "../node_modules/source-sans-pro/source-sans-pro.css";
+@import "../node_modules/source-code-pro/source-code-pro.css";
 
-:root {
+:root,
+* {
 	font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont,
 		"Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
 		"Helvetica Neue", sans-serif;
+}
+
+* {
+	box-sizing: border-box;
+}
+
+code {
+	font-family: "Source Code Pro", "Courier New", Courier, monospace;
 }
