--- a/templates/onboarding.html
+++ b/templates/onboarding.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8" />
-		<title>Lovely Inbox</title>
+		<title>Welcome to Lovely Inbox</title>
 	</head>
 	<body>
 		<div id="root"></div>
